--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "nodemailer": "^6.7.7",
         "nodemon": "^2.0.19"
     },
+    "description": "",
     "repository": {
         "type": "git",
         "url": "https://github.com/cheerfullhitchhiker/lavkalavka"
